# ThreadPool_VS_NoPool

./: CMakeLists.txt  main.cpp
configuration/: StaticData.h
matrixManagement/: MatrixIOManagement.cpp  MatrixIOManagement.h  MatrixMemoryManagement.cpp  MatrixMemoryManagement.h  MatrixOperations.cpp  MatrixOperations.h
taskExecution/individualThreads/: Subtask.cpp  Subtask.h  TaskManagement.cpp  TaskManagement.h  ThreadsManagement.cpp  ThreadsManagement.h
taskExecution/threadPooled/: Subtask.cpp  Subtask.h  TaskManagement.cpp  TaskManagement.h
threadPool/: ThreadPool.cpp  ThreadPool.h
